<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_generator_java</name>
  <version>0.0.3</version>
  <description>Generate the ROS interfaces in Java.</description>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <author email="esteve@apache.org">Esteve Fernandez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_export_jars</buildtool_depend>
  <buildtool_depend>ament_cmake_export_jni_libraries</buildtool_depend>
  <buildtool_depend>rcljava_common</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_export_jars</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_export_jni_libraries</buildtool_export_depend>
  <buildtool_export_depend>rcljava_common</buildtool_export_depend>
  <buildtool_export_depend>rosidl_parser</buildtool_export_depend>
  <buildtool_export_depend>rosidl_pycommon</buildtool_export_depend>
  <buildtool_export_depend>rosidl_runtime_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_typesupport_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_typesupport_interface</buildtool_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_generator_packages</member_of_group>
  <member_of_group>rosidl_runtime_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
