<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_rosidl_generator_java</name>
  <version>0.0.3</version>
  <description>Tests for Java code generation for ROS interfaces.</description>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <author email="esteve@apache.org">Esteve Fernandez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <test_depend>action_msgs</test_depend>
  <test_depend>java</test_depend>
  <test_depend>rcljava_common</test_depend>
  <test_depend>rosidl_cmake</test_depend>
  <!-- Note, rosidl_typesupport_c must appear before rosidl_generator_java, otherwise we get a build error.
       This is probably a bug in rosidl in the way it discovered dependencies. -->
  <test_depend>rosidl_typesupport_c</test_depend>
  <test_depend>rosidl_generator_java</test_depend>
  <test_depend>test_interface_files</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
